src/main/resources/Files/JavadocParser.g4
/*
 [The "BSD licence"]
 Copyright (c) 2016 Pascal Gruen
 All rights reserved.

 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
 are met:
 1. Redistributions of source code must retain the above copyright
    notice, this list of conditions and the following disclaimer.
 2. Redistributions in binary form must reproduce the above copyright
    notice, this list of conditions and the following disclaimer in the
    documentation and/or other materials provided with the distribution.
 3. The name of the author may not be used to endorse or promote products
    derived from this software without specific prior written permission.

 THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
 IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
 OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
 IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
 INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
 NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/

// $antlr-format alignTrailingComments true, columnLimit 150, minEmptyLines 1, maxEmptyLinesToKeep 1, reflowComments false, useTab false
// $antlr-format allowShortRulesOnASingleLine false, allowShortBlocksOnASingleLine true, alignSemicolons hanging, alignColons hanging

parser grammar JavadocParser;

options {
    tokenVocab = JavadocLexer;
}

documentation
    : EOF
    | JAVADOC_START skipWhitespace* documentationContent JAVADOC_END EOF
    | skipWhitespace* documentationContent EOF
    ;

documentationContent
    : description skipWhitespace*
    | skipWhitespace* tagSection
    | description NEWLINE+ skipWhitespace* tagSection
    ;

skipWhitespace
    : SPACE
    | NEWLINE
    ;

description
    : descriptionLine (descriptionNewline+ descriptionLine)*
    ;

descriptionLine
    : descriptionLineStart descriptionLineElement*
    | inlineTag descriptionLineElement*
    ;

descriptionLineStart
    : SPACE? descriptionLineNoSpaceNoAt+ (descriptionLineNoSpaceNoAt | SPACE | AT)*
    ;

descriptionLineNoSpaceNoAt
    : TEXT_CONTENT
    | NAME
    | STAR
    | SLASH
    | BRACE_OPEN
    | BRACE_CLOSE
    ;

descriptionLineElement
    : inlineTag
    | descriptionLineText
    ;

descriptionLineText
    : (descriptionLineNoSpaceNoAt | SPACE | AT)+
    ;

descriptionNewline
    : NEWLINE
    ;

tagSection
    : blockTag+
    ;

blockTag
    : SPACE? AT blockTagName  (SPACE? blockTagContents)?
    ;

blockTagName
    : NAME
    ;
blockTagContents
    : blockTagContent*;

blockTagContent
    : blockTagText
    | inlineTag
    | NEWLINE
    ;

blockTagText
    : blockTagTextElement+
    ;

blockTagTextElement
    : TEXT_CONTENT
    | NAME
    | SPACE
    | STAR
    | SLASH
    | BRACE_OPEN
    | BRACE_CLOSE
    ;

inlineTag
    : INLINE_TAG_START inlineTagName SPACE* inlineTagContent? BRACE_CLOSE
    ;

inlineTagName
    : NAME
    ;

inlineTagContent
    : braceContent+
    ;

braceExpression
    : BRACE_OPEN braceContent* BRACE_CLOSE
    ;

braceContent
    : braceExpression
    | braceText (NEWLINE* braceText)*
    ;

braceText
    : TEXT_CONTENT
    | NAME
    | SPACE
    | STAR
    | SLASH
    | NEWLINE
    ;
